--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
+        "chart.js": "^4.4.2",
+        "vue-chartjs": "^5.3.1",
         "vuetify": "^3.5.14"
     }
 }
