--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "finazon/finazon-grpc-php": "^1.1.3",
+        "grpc/grpc": "^1.57",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/reverb": "@beta",
