--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/reverb": "@beta",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "phrity/websocket": "^2.0",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
