--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@inertiajs/vue3": "^1.0.0",
         "@mdi/font": "^7.4.47",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/ws": "^8.5.10",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
@@ -23,8 +24,15 @@
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
+        "@canvasjs/stockcharts": "^1.8.4",
+        "@canvasjs/vue-charts": "^1.0.4",
+        "@canvasjs/vue-stockcharts": "^1.0.4",
+        "@types/canvasjs": "^1.9.11",
+        "apexcharts": "^3.49.0",
         "chart.js": "^4.4.2",
+        "vue-apexcharts": "^1.6.2",
         "vue-chartjs": "^5.3.1",
+        "vue3-apexcharts": "^1.5.2",
         "vuetify": "^3.5.14"
     }
 }
