--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
         "skipLibCheck": true,
         "paths": {
             "@/*": ["./resources/js/*"],
-            "ziggy-js": ["./vendor/tightenco/ziggy"]
-        }
+            "ziggy-js": ["./vendor/tightenco/ziggy"],
+        },
     },
     "include": ["resources/js/**/*.ts", "resources/js/**/*.d.ts", "resources/js/**/*.vue"]
 }
