--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vue-tsc && vite build"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.2",
         "@inertiajs/vue3": "^1.0.0",
         "@mdi/font": "^7.4.47",
         "@tailwindcss/forms": "^0.5.3",
@@ -28,6 +29,7 @@
         "@canvasjs/vue-charts": "^1.0.4",
         "@canvasjs/vue-stockcharts": "^1.0.4",
         "@types/canvasjs": "^1.9.11",
+        "@vueuse/motion": "^2.1.0",
         "apexcharts": "^3.49.0",
         "chart.js": "^4.4.2",
         "vue-apexcharts": "^1.6.2",
